# carrer_copilot

./: .env  .env.example  .gitignore  CONTRIBUTING.md  IMPROVEMENTS.md  JD_FORMAT_MIGRATION_GUIDE.md  MATCHING_IMPROVEMENTS.md  README.md  TROUBLESHOOTING_API.md  app.py  config.py  diagnose_api.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  test_jd_alignment.py  verify_jd_format.py
.claude/: settings.local.json
chroma_db/: chroma.sqlite3
database/: chroma_db.py
examples/: README.md  api_usage.py
examples/job_descriptions/: software_engineer.txt
match/: match.py  resume_jd_matcher.py  resume_jd_matcher.py.tmp.22180.1761547891239  resume_jd_matcher.py.tmp.22180.1761548011240  resume_jd_matcher.py.tmp.22180.1761549569904
process/: jd_process.py  jd_process.py.tmp.22180.1761547990397  resume_process.py  resume_process.py.tmp.17004.1761633305960  resume_process.py.tmp.22180.1761547972939
prompt/: extract_job_description.py  extract_resume.py  extract_resume.py.tmp.17004.1761624223291  match_resume_jd.py
tests/: README.md  __init__.py  test_config.py  test_text_utils.py
utils/: __init__.py  cache_manager.py  chunk_size_manager.py  exceptions.py  logger.py  text_utils.py
